# reinforcement-learning

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
examples/: jackscarrental.py
rl/: action_selectors.py  agent.py  agents.py  callbacks.py  custom_types.py  experiments.py  learningrate.py  simulator.py  utils.py
rl/agents/: action_selector.py  base.py  nonassociative.py  random.py
rl/environments/: bandit.py  base.py  blackjack.py
rl/mdp/: __init__.py  _types.py  base.py  gamblersproblem.py  gridworld.py  jackscarrental.py  solve.py
rl/policies/: action_selection_strategy.py  base.py  gradients.py  nonassociative.py  random.py  value_learning.py
rlbook/: bandit.py
rlbook/agents/: base.py  random.py
rlbook/environments/: base.py
tests/: conftest.py  fakes.py  test_action_selector.py  test_agent.py  test_agents.py  test_bandit.py  test_callbacks.py  test_experiments.py  test_learningrate.py  test_simulator.py  test_utils.py
tests/agents/: test_action_selector.py  test_base.py  test_nonassociative.py  test_random.py
tests/environments/: test_bandit.py  test_blackjack.py
tests/mdp/: conftest.py  test_base.py  test_gamblersproblem.py  test_gridworld.py  test_jackscarrental.py  test_solve.py  test_solve_for_gridworld.py
tests/mdp/data/: jcr_optimal_policy.txt
tests/policies/: test_action_selection_strategy.py  test_gradients.py  test_nonassociative.py  test_random.py  test_value_learning.py
