[metadata]
name = reinforcement-learning
version = 0.0.1
author = Sen-R
description = Library for reinforcement learning
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sen-R/reinforcement-learning
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = rl
python_requires = >= 3.6

